classDiagram
class WebService {
    +requestUsername() String
    +requestPassword() String
}
class DAOUser {
    +UsersList: Array<User>[]
}
class User {
    +String username
    +String password
    +String email
    +showInfoUser(User)
}
class DAOChild {
    +int id
    +String name
    +showInfoChild(Child)
}
class TapatProgres {
    +int temporizador
}
WebService --> DAOUser
WebService --> DAOChild
DAOUser --> User: requests User data
User --> DAOUser: retrieves User data
User --> Child
Child --> TapatProgres